--- a/scss/ucla/_form-tweaks.scss
+++ b/scss/ucla/_form-tweaks.scss
@@ -44,7 +44,7 @@ button, .button {
   &:hover {
     color: $white;
     background: $ucla-its-primary-button-color-hover;
-    border: $ucla-its-primary-button-color-hover;
+    border: 1px solid $ucla-its-primary-button-color-hover;
   }
  }
 
@@ -66,7 +66,7 @@ button, .button {
   border: 1px solid $alert-color;
   &:hover {
     background-color: $alert-color;
-    border: $alert-color;
+    border: 1px solid $alert-color;
     color: $white;
   }
 }
