add in new health colors

--- a/scss/uc/_uc-branding.scss
+++ b/scss/uc/_uc-branding.scss
@@ -95,9 +95,11 @@ $ucla-global-letter-spacing: 0.5px;
 ///       UCLA MEDICAL CENTER
 /////////////////////////////////////////
 
-// http://identity.uclahealth.org/body.cfm?id=76
-// http://identity.uclahealth.org/body.cfm?id=75
-// http://identity.uclahealth.org/body.cfm?id=113
+// http://identity.uclahealth.org/ColorPalette
+
+$ucla-health-dark-blue: #21578a;
+$ucla-health-link: #0072bc;
+$ucla-health-link-hover: #23527c;
 
 // Primary Health Colour
 
