jiggle font stack

--- a/scss/uc/_uc-branding.scss
+++ b/scss/uc/_uc-branding.scss
@@ -87,8 +87,8 @@ $ucla-its-article-hover-bg: #f9f9f9;
 
 // Fonts
 
-$ucla-font-stack: 'Proxima Nova', ProximaNova, Verdana, sans-serif;
-$ucla-font-stack-alt: 'Proxima Nova', ProximaNova, Verdana, sans-serif;
+$ucla-font-stack: ProximaNova, 'Proxima Nova', Verdana, sans-serif;
+$ucla-font-stack-alt: ProximaNova, 'Proxima Nova', Verdana, sans-serif;
 $ucla-global-letter-spacing: 0.5px;
 
 /////////////////////////////////////////
