focus state for buttons

--- a/scss/uc/_uc-branding.scss
+++ b/scss/uc/_uc-branding.scss
@@ -40,8 +40,8 @@ $ucla-its-primary-light: #dde6ed; // not used anywhere?
 $ucla-its-secondary: #ffe800; // used for links in side nav, header, footer
 $ucla-its-gray-dark:#292b2c; // used for text
 $ucla-its-gray: #464a4c; // not used anywhere?
-$ucla-its-gray-light: #636c72; // not used anywhere?
-$ucla-its-gray-lighter: #e8f2f9; // not used anywhere?
+$ucla-its-gray-light: #636c72; // medium-dark gray, not used anywhere?
+$ucla-its-gray-lighter: #e8f2f9; // light blue, not used anywhere?
 $ucla-its-gray-lightest: #f7f7f9; // not used anywhere?
 $ucla-its-success: #58b95b;
 $ucla-its-info: #2b72a5;
