--- a/scss/ucla/_form-tweaks.scss
+++ b/scss/ucla/_form-tweaks.scss
@@ -41,8 +41,8 @@ button, .button {
   border: 1px solid $ucla-its-primary-button-color;
   text-transform: uppercase;
   &:hover, &:focus {
-    background: $ucla-its-primary-button-color-hover;
-    border: 1px solid $ucla-its-primary-button-color-hover;
+    background: $ucla-its-primary;
+    border: 1px solid $ucla-its-primary;
     color: $white;
   }
  }
@@ -53,8 +53,8 @@ button, .button {
   border: 1px solid $ucla-its-primary-button-color;
   color: $white;
   &:hover, &:focus {
-    background-color: $ucla-its-primary-button-color-hover;
-    border: 1px solid $ucla-its-primary-button-color-hover;
+    background-color: $ucla-its-primary;
+    border: 1px solid $ucla-its-primary;
     color: $white;
   }
 }
