--- a/scss/uc/_uc-branding.scss
+++ b/scss/uc/_uc-branding.scss
@@ -71,6 +71,7 @@ $ucla-its-info-border: #003d6e;
 $ucla-its-top-service-links-hover: #1f4b87;
 $ucla-its-alert-border: #013d6e;
 $ucla-its-nav-title-opened: #034172;
+$ucla-its-hero-blue: #2e79ab;
 
 // various one-off grays
 $ucla-its-label: #444;
