--- a/scss/ucla/_ucla-badges.scss
+++ b/scss/ucla/_ucla-badges.scss
@@ -13,8 +13,8 @@
   position: absolute;
   background: $ucla-pink;
   height: $global-spacing * 2;
-  top: -$global-spacing;
-  right: -.1rem;;
+  top: -$global-spacing / 2;
+  right: -$global-spacing;
   width: $global-spacing * 2;
   text-align: center;
   line-height: $global-spacing * 2;
